<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoQuiz</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="cheat_button">Cheat!</string> <!-- added for CheatActivity -->

    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="judgment_toast">Cheating is wrong.</string> <!-- added for cheating -->
    <string name="warning_text">Are you sure you want to do this?</string> <!-- added for CheatActivity -->
    <string name="show_answer_button">Show Answer</string> <!-- added for CheatActivity -->

    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>

</resources>
